--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,8 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
+
 @import 'colors';
 @import 'typography';
 @import 'table-style';
+@import 'toggle';
