--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,3 +6,4 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import 'typography';
 @import 'table-style';
 @import 'toggle';
+@import 'game-board';
