adds some styling to project

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,4 +1,8 @@
 $base: #000;
+
 $white: #fff;
-$green: #008000;
-$red: #f00;
+$green: #1EC91E;
+$red: #FB2525;
+$yellow: #FBB025;
+$blue: #2654A7;
+$grey: #F2F2F2;
