preserves working functionality

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,3 +7,4 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import 'table-style';
 @import 'toggle';
 @import 'game-board';
+@import 'background';
